[package]
name = "rustproxy"
version = "0.1.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
tokio = {version = "1", features=["full"]}
serde_json = "1"
tokio-socks = "0.5"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
